final_project/_build/parser.output
   0  $accept : %entry% $end

   1  const : NUM
   2        | TRUE
   3        | FALSE
   4        | NIL COLON typ

   5  prim1 : ADD1
   6        | SUB1
   7        | NOT
   8        | PRINT
   9        | ISBOOL
  10        | ISNUM
  11        | PRINTSTACK

  12  bindings : bind EQUAL expr
  13           | bind EQUAL expr COMMA bindings

  14  namebindings : namebind EQUAL expr
  15               | namebind EQUAL expr COMMA namebindings

  16  expr : LET bindings IN expr
  17       | LET REC namebindings IN expr
  18       | IF expr COLON expr ELSECOLON expr
  19       | BEGIN expr END
  20       | binop_expr SEMI expr
  21       | binop_expr
  22       | NEW ID

  23  exprs : expr
  24        | expr COMMA exprs

  25  lambda_expr : LPARENNOSPACE LAMBDA LPARENNOSPACE binds RPAREN COLON expr RPAREN
  26              | LPARENNOSPACE LAMBDA LPARENSPACE binds RPAREN COLON expr RPAREN
  27              | LPARENNOSPACE LAMBDA COLON expr RPAREN
  28              | LPARENSPACE LAMBDA LPARENNOSPACE binds RPAREN COLON expr RPAREN
  29              | LPARENSPACE LAMBDA LPARENSPACE binds RPAREN COLON expr RPAREN
  30              | LPARENSPACE LAMBDA COLON expr RPAREN

  31  simple_expr : prim1 LPARENNOSPACE expr RPAREN
  32              | LPARENSPACE expr RPAREN
  33              | LPARENNOSPACE expr RPAREN
  34              | binop_expr LPARENNOSPACE exprs RPAREN
  35              | binop_expr LPARENNOSPACE RPAREN
  36              | lambda_expr
  37              | const
  38              | LPARENNOSPACE expr COLON typ RPAREN
  39              | LPARENSPACE expr COLON typ RPAREN
  40              | id
  41              | simple_expr LBRACK ID RBRACK
  42              | simple_expr DOT ID LPARENNOSPACE exprs RPAREN
  43              | simple_expr DOT ID LPARENNOSPACE RPAREN
  44              | simple_expr LBRACK ID COLONEQ expr RBRACK
  45              | THIS

  46  id : ID

  47  binop_expr : binop_expr PLUS binop_expr
  48             | binop_expr MINUS binop_expr
  49             | binop_expr TIMES binop_expr
  50             | binop_expr AND binop_expr
  51             | binop_expr OR binop_expr
  52             | binop_expr GREATER binop_expr
  53             | binop_expr GREATEREQ binop_expr
  54             | binop_expr LESSSPACE binop_expr
  55             | binop_expr LESSNOSPACE binop_expr
  56             | binop_expr LESSEQ binop_expr
  57             | binop_expr EQEQ binop_expr
  58             | simple_expr

  59  decl : DEF ID LPARENNOSPACE RPAREN COLON expr
  60       | DEF ID LPARENNOSPACE RPAREN THINARROW typ COLON expr
  61       | DEF ID LESSNOSPACE tyids GREATER LPARENNOSPACE binds RPAREN THINARROW typ COLON expr
  62       | DEF ID LPARENNOSPACE binds RPAREN COLON expr
  63       | DEF ID LPARENNOSPACE binds RPAREN THINARROW typ COLON expr
  64       | CLASS ID COLON FIELDS namebindings_consts METHODS inclass_decls END
  65       | CLASS ID EXTENDS ID COLON FIELDS namebindings_consts METHODS inclass_decls END

  66  namebindings_consts : namebind EQUAL const
  67                      | namebind EQUAL const COMMA namebindings_consts

  68  tyids :
  69        | TYID
  70        | TYID COMMA tyids

  71  tyid : TYID

  72  binds : bind
  73        | bind COMMA binds

  74  bind : namebind
  75       | blankbind

  76  blankbind : UNDERSCORE
  77            | UNDERSCORE COLON typ

  78  namebind : ID
  79           | ID COLON typ

  80  typ : ID
  81      | tyid
  82      | arrowtyp

  83  arrowtyp : LPARENNOSPACE typs THINARROW typ RPAREN
  84           | LPARENSPACE typs THINARROW typ RPAREN
  85           | LPARENNOSPACE THINARROW typ RPAREN
  86           | LPARENSPACE THINARROW typ RPAREN

  87  typs : typ
  88       | typ COMMA typs

  89  startyps : typ
  90           | typ TIMES startyps

  91  declgroup : decl
  92            | decl ANDDEF declgroup

  93  decls :
  94        | declgroup decls

  95  inclass_decls :
  96                | decl inclass_decls

  97  tydecl : TYPE ID EQUAL LPARENNOSPACE startyps RPAREN
  98         | TYPE ID EQUAL LPARENSPACE startyps RPAREN

  99  tydecls :
 100          | tydecl tydecls

 101  program : tydecls decls expr COLON typ EOF
 102          | tydecls decls expr EOF

 103  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (103)
	tydecls : .  (99)

	TYPE  shift 3
	NUM  reduce 99
	ID  reduce 99
	DEF  reduce 99
	CLASS  reduce 99
	NEW  reduce 99
	THIS  reduce 99
	ADD1  reduce 99
	SUB1  reduce 99
	LPARENSPACE  reduce 99
	LPARENNOSPACE  reduce 99
	LET  reduce 99
	IF  reduce 99
	PRINT  reduce 99
	PRINTSTACK  reduce 99
	TRUE  reduce 99
	FALSE  reduce 99
	ISBOOL  reduce 99
	ISNUM  reduce 99
	NOT  reduce 99
	NIL  reduce 99
	BEGIN  reduce 99

	program  goto 4
	tydecl  goto 5
	tydecls  goto 6


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	tydecl : TYPE . ID EQUAL LPARENNOSPACE startyps RPAREN  (97)
	tydecl : TYPE . ID EQUAL LPARENSPACE startyps RPAREN  (98)

	ID  shift 7
	.  error


state 4
	%entry% : '\001' program .  (103)

	.  reduce 103


state 5
	tydecls : tydecl . tydecls  (100)
	tydecls : .  (99)

	TYPE  shift 3
	NUM  reduce 99
	ID  reduce 99
	DEF  reduce 99
	CLASS  reduce 99
	NEW  reduce 99
	THIS  reduce 99
	ADD1  reduce 99
	SUB1  reduce 99
	LPARENSPACE  reduce 99
	LPARENNOSPACE  reduce 99
	LET  reduce 99
	IF  reduce 99
	PRINT  reduce 99
	PRINTSTACK  reduce 99
	TRUE  reduce 99
	FALSE  reduce 99
	ISBOOL  reduce 99
	ISNUM  reduce 99
	NOT  reduce 99
	NIL  reduce 99
	BEGIN  reduce 99

	tydecl  goto 5
	tydecls  goto 8


state 6
	program : tydecls . decls expr COLON typ EOF  (101)
	program : tydecls . decls expr EOF  (102)
	decls : .  (93)

	DEF  shift 9
	CLASS  shift 10
	NUM  reduce 93
	ID  reduce 93
	NEW  reduce 93
	THIS  reduce 93
	ADD1  reduce 93
	SUB1  reduce 93
	LPARENSPACE  reduce 93
	LPARENNOSPACE  reduce 93
	LET  reduce 93
	IF  reduce 93
	PRINT  reduce 93
	PRINTSTACK  reduce 93
	TRUE  reduce 93
	FALSE  reduce 93
	ISBOOL  reduce 93
	ISNUM  reduce 93
	NOT  reduce 93
	NIL  reduce 93
	BEGIN  reduce 93

	decl  goto 11
	declgroup  goto 12
	decls  goto 13


state 7
	tydecl : TYPE ID . EQUAL LPARENNOSPACE startyps RPAREN  (97)
	tydecl : TYPE ID . EQUAL LPARENSPACE startyps RPAREN  (98)

	EQUAL  shift 14
	.  error


state 8
	tydecls : tydecl tydecls .  (100)

	.  reduce 100


state 9
	decl : DEF . ID LPARENNOSPACE RPAREN COLON expr  (59)
	decl : DEF . ID LPARENNOSPACE RPAREN THINARROW typ COLON expr  (60)
	decl : DEF . ID LESSNOSPACE tyids GREATER LPARENNOSPACE binds RPAREN THINARROW typ COLON expr  (61)
	decl : DEF . ID LPARENNOSPACE binds RPAREN COLON expr  (62)
	decl : DEF . ID LPARENNOSPACE binds RPAREN THINARROW typ COLON expr  (63)

	ID  shift 15
	.  error


state 10
	decl : CLASS . ID COLON FIELDS namebindings_consts METHODS inclass_decls END  (64)
	decl : CLASS . ID EXTENDS ID COLON FIELDS namebindings_consts METHODS inclass_decls END  (65)

	ID  shift 16
	.  error


state 11
	declgroup : decl .  (91)
	declgroup : decl . ANDDEF declgroup  (92)

	ANDDEF  shift 17
	NUM  reduce 91
	ID  reduce 91
	DEF  reduce 91
	CLASS  reduce 91
	NEW  reduce 91
	THIS  reduce 91
	ADD1  reduce 91
	SUB1  reduce 91
	LPARENSPACE  reduce 91
	LPARENNOSPACE  reduce 91
	LET  reduce 91
	IF  reduce 91
	PRINT  reduce 91
	PRINTSTACK  reduce 91
	TRUE  reduce 91
	FALSE  reduce 91
	ISBOOL  reduce 91
	ISNUM  reduce 91
	NOT  reduce 91
	NIL  reduce 91
	BEGIN  reduce 91


state 12
	decls : declgroup . decls  (94)
	decls : .  (93)

	DEF  shift 9
	CLASS  shift 10
	NUM  reduce 93
	ID  reduce 93
	NEW  reduce 93
	THIS  reduce 93
	ADD1  reduce 93
	SUB1  reduce 93
	LPARENSPACE  reduce 93
	LPARENNOSPACE  reduce 93
	LET  reduce 93
	IF  reduce 93
	PRINT  reduce 93
	PRINTSTACK  reduce 93
	TRUE  reduce 93
	FALSE  reduce 93
	ISBOOL  reduce 93
	ISNUM  reduce 93
	NOT  reduce 93
	NIL  reduce 93
	BEGIN  reduce 93

	decl  goto 11
	declgroup  goto 12
	decls  goto 18


state 13
	program : tydecls decls . expr COLON typ EOF  (101)
	program : tydecls decls . expr EOF  (102)

	NUM  shift 19
	ID  shift 20
	NEW  shift 21
	THIS  shift 22
	ADD1  shift 23
	SUB1  shift 24
	LPARENSPACE  shift 25
	LPARENNOSPACE  shift 26
	LET  shift 27
	IF  shift 28
	PRINT  shift 29
	PRINTSTACK  shift 30
	TRUE  shift 31
	FALSE  shift 32
	ISBOOL  shift 33
	ISNUM  shift 34
	NOT  shift 35
	NIL  shift 36
	BEGIN  shift 37
	.  error

	const  goto 38
	prim1  goto 39
	expr  goto 40
	binop_expr  goto 41
	lambda_expr  goto 42
	simple_expr  goto 43
	id  goto 44


state 14
	tydecl : TYPE ID EQUAL . LPARENNOSPACE startyps RPAREN  (97)
	tydecl : TYPE ID EQUAL . LPARENSPACE startyps RPAREN  (98)

	LPARENSPACE  shift 45
	LPARENNOSPACE  shift 46
	.  error


state 15
	decl : DEF ID . LPARENNOSPACE RPAREN COLON expr  (59)
	decl : DEF ID . LPARENNOSPACE RPAREN THINARROW typ COLON expr  (60)
	decl : DEF ID . LESSNOSPACE tyids GREATER LPARENNOSPACE binds RPAREN THINARROW typ COLON expr  (61)
	decl : DEF ID . LPARENNOSPACE binds RPAREN COLON expr  (62)
	decl : DEF ID . LPARENNOSPACE binds RPAREN THINARROW typ COLON expr  (63)

	LPARENNOSPACE  shift 47
	LESSNOSPACE  shift 48
	.  error


state 16
	decl : CLASS ID . COLON FIELDS namebindings_consts METHODS inclass_decls END  (64)
	decl : CLASS ID . EXTENDS ID COLON FIELDS namebindings_consts METHODS inclass_decls END  (65)

	EXTENDS  shift 49
	COLON  shift 50
	.  error


state 17
	declgroup : decl ANDDEF . declgroup  (92)

	DEF  shift 9
	CLASS  shift 10
	.  error

	decl  goto 11
	declgroup  goto 51


state 18
	decls : declgroup decls .  (94)

	.  reduce 94


state 19
	const : NUM .  (1)

	.  reduce 1


state 20
	id : ID .  (46)

	.  reduce 46


state 21
	expr : NEW . ID  (22)

	ID  shift 52
	.  error


state 22
	simple_expr : THIS .  (45)

	.  reduce 45


state 23
	prim1 : ADD1 .  (5)

	.  reduce 5


state 24
	prim1 : SUB1 .  (6)

	.  reduce 6


state 25
	lambda_expr : LPARENSPACE . LAMBDA LPARENNOSPACE binds RPAREN COLON expr RPAREN  (28)
	lambda_expr : LPARENSPACE . LAMBDA LPARENSPACE binds RPAREN COLON expr RPAREN  (29)
	lambda_expr : LPARENSPACE . LAMBDA COLON expr RPAREN  (30)
	simple_expr : LPARENSPACE . expr RPAREN  (32)
	simple_expr : LPARENSPACE . expr COLON typ RPAREN  (39)

	NUM  shift 19
	ID  shift 20
	NEW  shift 21
	THIS  shift 22
	ADD1  shift 23
	SUB1  shift 24
	LPARENSPACE  shift 25
	LPARENNOSPACE  shift 26
	LET  shift 27
	IF  shift 28
	PRINT  shift 29
	PRINTSTACK  shift 30
	TRUE  shift 31
	FALSE  shift 32
	ISBOOL  shift 33
	ISNUM  shift 34
	NOT  shift 35
	NIL  shift 36
	LAMBDA  shift 53
	BEGIN  shift 37
	.  error

	const  goto 38
	prim1  goto 39
	expr  goto 54
	binop_expr  goto 41
	lambda_expr  goto 42
	simple_expr  goto 43
	id  goto 44


state 26
	lambda_expr : LPARENNOSPACE . LAMBDA LPARENNOSPACE binds RPAREN COLON expr RPAREN  (25)
	lambda_expr : LPARENNOSPACE . LAMBDA LPARENSPACE binds RPAREN COLON expr RPAREN  (26)
	lambda_expr : LPARENNOSPACE . LAMBDA COLON expr RPAREN  (27)
	simple_expr : LPARENNOSPACE . expr RPAREN  (33)
	simple_expr : LPARENNOSPACE . expr COLON typ RPAREN  (38)

	NUM  shift 19
	ID  shift 20
	NEW  shift 21
	THIS  shift 22
	ADD1  shift 23
	SUB1  shift 24
	LPARENSPACE  shift 25
	LPARENNOSPACE  shift 26
	LET  shift 27
	IF  shift 28
	PRINT  shift 29
	PRINTSTACK  shift 30
	TRUE  shift 31
	FALSE  shift 32
	ISBOOL  shift 33
	ISNUM  shift 34
	NOT  shift 35
	NIL  shift 36
	LAMBDA  shift 55
	BEGIN  shift 37
	.  error

	const  goto 38
	prim1  goto 39
	expr  goto 56
	binop_expr  goto 41
	lambda_expr  goto 42
	simple_expr  goto 43
	id  goto 44


state 27
	expr : LET . bindings IN expr  (16)
	expr : LET . REC namebindings IN expr  (17)

	ID  shift 57
	REC  shift 58
	UNDERSCORE  shift 59
	.  error

	bindings  goto 60
	bind  goto 61
	namebind  goto 62
	blankbind  goto 63


state 28
	expr : IF . expr COLON expr ELSECOLON expr  (18)

	NUM  shift 19
	ID  shift 20
	NEW  shift 21
	THIS  shift 22
	ADD1  shift 23
	SUB1  shift 24
	LPARENSPACE  shift 25
	LPARENNOSPACE  shift 26
	LET  shift 27
	IF  shift 28
	PRINT  shift 29
	PRINTSTACK  shift 30
	TRUE  shift 31
	FALSE  shift 32
	ISBOOL  shift 33
	ISNUM  shift 34
	NOT  shift 35
	NIL  shift 36
	BEGIN  shift 37
	.  error

	const  goto 38
	prim1  goto 39
	expr  goto 64
	binop_expr  goto 41
	lambda_expr  goto 42
	simple_expr  goto 43
	id  goto 44


state 29
	prim1 : PRINT .  (8)

	.  reduce 8


state 30
	prim1 : PRINTSTACK .  (11)

	.  reduce 11


state 31
	const : TRUE .  (2)

	.  reduce 2


state 32
	const : FALSE .  (3)

	.  reduce 3


state 33
	prim1 : ISBOOL .  (9)

	.  reduce 9


state 34
	prim1 : ISNUM .  (10)

	.  reduce 10


state 35
	prim1 : NOT .  (7)

	.  reduce 7


state 36
	const : NIL . COLON typ  (4)

	COLON  shift 65
	.  error


state 37
	expr : BEGIN . expr END  (19)

	NUM  shift 19
	ID  shift 20
	NEW  shift 21
	THIS  shift 22
	ADD1  shift 23
	SUB1  shift 24
	LPARENSPACE  shift 25
	LPARENNOSPACE  shift 26
	LET  shift 27
	IF  shift 28
	PRINT  shift 29
	PRINTSTACK  shift 30
	TRUE  shift 31
	FALSE  shift 32
	ISBOOL  shift 33
	ISNUM  shift 34
	NOT  shift 35
	NIL  shift 36
	BEGIN  shift 37
	.  error

	const  goto 38
	prim1  goto 39
	expr  goto 66
	binop_expr  goto 41
	lambda_expr  goto 42
	simple_expr  goto 43
	id  goto 44


state 38
	simple_expr : const .  (37)

	.  reduce 37


state 39
	simple_expr : prim1 . LPARENNOSPACE expr RPAREN  (31)

	LPARENNOSPACE  shift 67
	.  error


state 40
	program : tydecls decls expr . COLON typ EOF  (101)
	program : tydecls decls expr . EOF  (102)

	COLON  shift 68
	EOF  shift 69
	.  error


state 41
	expr : binop_expr . SEMI expr  (20)
	expr : binop_expr .  (21)
	simple_expr : binop_expr . LPARENNOSPACE exprs RPAREN  (34)
	simple_expr : binop_expr . LPARENNOSPACE RPAREN  (35)
	binop_expr : binop_expr . PLUS binop_expr  (47)
	binop_expr : binop_expr . MINUS binop_expr  (48)
	binop_expr : binop_expr . TIMES binop_expr  (49)
	binop_expr : binop_expr . AND binop_expr  (50)
	binop_expr : binop_expr . OR binop_expr  (51)
	binop_expr : binop_expr . GREATER binop_expr  (52)
	binop_expr : binop_expr . GREATEREQ binop_expr  (53)
	binop_expr : binop_expr . LESSSPACE binop_expr  (54)
	binop_expr : binop_expr . LESSNOSPACE binop_expr  (55)
	binop_expr : binop_expr . LESSEQ binop_expr  (56)
	binop_expr : binop_expr . EQEQ binop_expr  (57)

	LPARENNOSPACE  shift 70
	PLUS  shift 71
	MINUS  shift 72
	TIMES  shift 73
	EQEQ  shift 74
	LESSSPACE  shift 75
	LESSNOSPACE  shift 76
	GREATER  shift 77
	LESSEQ  shift 78
	GREATEREQ  shift 79
	AND  shift 80
	OR  shift 81
	SEMI  shift 82
	NUM  reduce 21
	ID  reduce 21
	DEF  reduce 21
	ANDDEF  reduce 21
	CLASS  reduce 21
	NEW  reduce 21
	THIS  reduce 21
	ADD1  reduce 21
	SUB1  reduce 21
	LPARENSPACE  reduce 21
	RPAREN  reduce 21
	RBRACK  reduce 21
	LET  reduce 21
	IN  reduce 21
	COMMA  reduce 21
	IF  reduce 21
	COLON  reduce 21
	ELSECOLON  reduce 21
	EOF  reduce 21
	PRINT  reduce 21
	PRINTSTACK  reduce 21
	TRUE  reduce 21
	FALSE  reduce 21
	ISBOOL  reduce 21
	ISNUM  reduce 21
	NOT  reduce 21
	NIL  reduce 21
	BEGIN  reduce 21
	END  reduce 21


state 42
	simple_expr : lambda_expr .  (36)

	.  reduce 36


state 43
	simple_expr : simple_expr . LBRACK ID RBRACK  (41)
	simple_expr : simple_expr . DOT ID LPARENNOSPACE exprs RPAREN  (42)
	simple_expr : simple_expr . DOT ID LPARENNOSPACE RPAREN  (43)
	simple_expr : simple_expr . LBRACK ID COLONEQ expr RBRACK  (44)
	binop_expr : simple_expr .  (58)

	LBRACK  shift 83
	DOT  shift 84
	NUM  reduce 58
	ID  reduce 58
	DEF  reduce 58
	ANDDEF  reduce 58
	CLASS  reduce 58
	NEW  reduce 58
	THIS  reduce 58
	ADD1  reduce 58
	SUB1  reduce 58
	LPARENSPACE  reduce 58
	LPARENNOSPACE  reduce 58
	RPAREN  reduce 58
	RBRACK  reduce 58
	LET  reduce 58
	IN  reduce 58
	COMMA  reduce 58
	PLUS  reduce 58
	MINUS  reduce 58
	TIMES  reduce 58
	IF  reduce 58
	COLON  reduce 58
	ELSECOLON  reduce 58
	EOF  reduce 58
	PRINT  reduce 58
	PRINTSTACK  reduce 58
	TRUE  reduce 58
	FALSE  reduce 58
	ISBOOL  reduce 58
	ISNUM  reduce 58
	EQEQ  reduce 58
	LESSSPACE  reduce 58
	LESSNOSPACE  reduce 58
	GREATER  reduce 58
	LESSEQ  reduce 58
	GREATEREQ  reduce 58
	AND  reduce 58
	OR  reduce 58
	NOT  reduce 58
	SEMI  reduce 58
	NIL  reduce 58
	BEGIN  reduce 58
	END  reduce 58


state 44
	simple_expr : id .  (40)

	.  reduce 40


state 45
	tydecl : TYPE ID EQUAL LPARENSPACE . startyps RPAREN  (98)

	ID  shift 85
	TYID  shift 86
	LPARENSPACE  shift 87
	LPARENNOSPACE  shift 88
	.  error

	typ  goto 89
	tyid  goto 90
	arrowtyp  goto 91
	startyps  goto 92


state 46
	tydecl : TYPE ID EQUAL LPARENNOSPACE . startyps RPAREN  (97)

	ID  shift 85
	TYID  shift 86
	LPARENSPACE  shift 87
	LPARENNOSPACE  shift 88
	.  error

	typ  goto 89
	tyid  goto 90
	arrowtyp  goto 91
	startyps  goto 93


state 47
	decl : DEF ID LPARENNOSPACE . RPAREN COLON expr  (59)
	decl : DEF ID LPARENNOSPACE . RPAREN THINARROW typ COLON expr  (60)
	decl : DEF ID LPARENNOSPACE . binds RPAREN COLON expr  (62)
	decl : DEF ID LPARENNOSPACE . binds RPAREN THINARROW typ COLON expr  (63)

	ID  shift 57
	RPAREN  shift 94
	UNDERSCORE  shift 59
	.  error

	bind  goto 95
	namebind  goto 62
	binds  goto 96
	blankbind  goto 63


state 48
	decl : DEF ID LESSNOSPACE . tyids GREATER LPARENNOSPACE binds RPAREN THINARROW typ COLON expr  (61)
	tyids : .  (68)

	TYID  shift 97
	GREATER  reduce 68

	tyids  goto 98


state 49
	decl : CLASS ID EXTENDS . ID COLON FIELDS namebindings_consts METHODS inclass_decls END  (65)

	ID  shift 99
	.  error


state 50
	decl : CLASS ID COLON . FIELDS namebindings_consts METHODS inclass_decls END  (64)

	FIELDS  shift 100
	.  error


state 51
	declgroup : decl ANDDEF declgroup .  (92)

	.  reduce 92


state 52
	expr : NEW ID .  (22)

	.  reduce 22

